--- a/css/vela.css
+++ b/css/vela.css
@@ -220,6 +220,7 @@ ul li .active{
 @media screen and (max-width:860px){
 	body{
 		overflow-x:hidden;
+                width:300px;
 	}
 	.menu{
 		position:absolute;
