--- a/css/vela.css
+++ b/css/vela.css
@@ -220,8 +220,8 @@ ul li .active{
 @media screen and (max-width:860px){
 	body{
 		overflow-x:hidden;
-                width:380px;
-                height:2500px;
+                max-width:380px;
+                max-height:2500px;
 	}
 	.menu{
 		position:absolute;
