--- a/css/vela.css
+++ b/css/vela.css
@@ -232,8 +232,8 @@ ul li .active{
 		display:flex;
 		flex-direction:column;
 		align-items:center;
-		width:0%;
-		
+		width:35%;
+		transform: translateX(100%);
 		transition: transform 0.5s ease-in;
 		
 	}
