--- a/css/vela.css
+++ b/css/vela.css
@@ -226,7 +226,7 @@ ul li .active{
         h2{
             display:none;
         }
-	.menu{
+	.men{
 		position:absolute;
 		right:0px;
 		height:100%;
