--- a/css/vela.css
+++ b/css/vela.css
@@ -226,7 +226,7 @@ ul li .active{
         h2{
             display:none;
         }
-	.men{
+	.menu{
 		position:absolute;
 		right:0px;
 		height:100%;
@@ -236,7 +236,7 @@ ul li .active{
 		flex-direction:column;
 		align-items:center;
 		width:35%;
-		transform: translateX(100%);
+		
 		transition: transform 0.5s ease-in;
 		
 	}
