--- a/css/vela.css
+++ b/css/vela.css
@@ -235,10 +235,9 @@ ul li .active{
 		display:flex;
 		flex-direction:column;
 		align-items:center;
-		width:35%;
-		
+		width:0%;
+		transform: translateX(100%);
 		transition: transform 0.5s ease-in;
-                display:none;
 		
 	}
 	.menu li{
