--- a/css/vela.css
+++ b/css/vela.css
@@ -228,7 +228,7 @@ ul li .active{
         }
 	.menu{
 		position:absolute;
-		right:0px;
+		left:0px;
 		height:100%;
 		top:0vh;
 		background-color:deepskyblue;
@@ -236,7 +236,7 @@ ul li .active{
 		flex-direction:column;
 		align-items:center;
 		width:35%;
-		transform: translateX(500%);
+		transform: translateX(-400%);
 		transition: transform 0.5s ease-in;
 		
 	}
