--- a/css/vela.css
+++ b/css/vela.css
@@ -231,7 +231,7 @@ ul li .active{
 		left:0px;
 		height:100%;
 		top:0vh;
-		background-color:deepskyblue;
+		background-color:white;
 		display:flex;
 		flex-direction:column;
 		align-items:center;
