--- a/css/vela.css
+++ b/css/vela.css
@@ -281,4 +281,7 @@ nav ul {
 		color:black;
                 font-size:20px;
 	}
+        nav li div p {
+                     font-size:20px;
+        }
 }
