--- a/css/vela.css
+++ b/css/vela.css
@@ -284,4 +284,7 @@ nav ul {
         nav li div p {
                      font-size:20px;
         }
+        nav button {
+                   margin-top: -50px;
+        }
 }
