--- a/css/vela.css
+++ b/css/vela.css
@@ -280,7 +280,7 @@ nav ul {
 	nav li a{
 		color:black;
                 font-size:20px;
-                padding-top: 200px;
+                margin-top: 20px;
 	}
         nav li div p {
                      font-size:20px;
