--- a/css/vela.css
+++ b/css/vela.css
@@ -283,7 +283,7 @@ nav ul {
 	}
         nav li div p {
                      font-size:20px;
-                     text-align:center;
+                     margin-left:40%;
         }
         nav button {
                    margin-top: 70px;
