--- a/css/vela.css
+++ b/css/vela.css
@@ -292,3 +292,16 @@ nav ul {
                margin-top: 20px;
         }
 }
+
+header{
+	
+    height:35px;
+	width:100%;
+	position:fixed;
+	z-index:1;
+}
+.secondary{
+          background-color:deepskyblue;
+          box-shadow:0px 0px 17px 0px;
+          transition:all 0.5s ease-in;
+}
