--- a/css/vela.css
+++ b/css/vela.css
@@ -301,7 +301,7 @@ header{
 	z-index:1;
 }
 .secondary{
-          background-color:deepskyblue;
+          background-color:white;
           box-shadow:0px 0px 17px 0px;
           transition:all 0.5s ease-in;
 }
