--- a/css/vela.css
+++ b/css/vela.css
@@ -244,6 +244,7 @@ ul li .active{
 	}
 	.burger{
 		display:block;
+                height:35px;
 	}
         .container-grid{
                         width:380px;
@@ -291,6 +292,7 @@ nav ul {
         nav li {
                margin-top: 20px;
         }
+        
 }
 
 header{
@@ -298,7 +300,7 @@ header{
     height:35px;
 	width:100%;
 	position:fixed;
-	
+	z-index:1;
 }
 .secondary{
           background-color:white;
