--- a/css/vela.css
+++ b/css/vela.css
@@ -281,6 +281,9 @@ nav ul {
 		color:black;
                 font-size:20px;
 	}
+        nav li a img {
+                     margin-top:-5px;
+        }
         nav li div p {
                      font-size:20px;
                      margin-left:40%;
