--- a/css/vela.css
+++ b/css/vela.css
@@ -281,8 +281,9 @@ nav ul {
 		color:black;
                 font-size:20px;
 	}
-        nav li a img {
+        nav ul li a img {
                      transform:translateY(-19%);
+                     margin-left: 5px;
         }
         nav li div p {
                      font-size:20px;
