--- a/css/vela.css
+++ b/css/vela.css
@@ -290,7 +290,7 @@ nav ul {
         }
         nav li {
                margin-top: 20px;
-               transform: translateX(-500%);
+               margin-left: -200px;
         }
         .container-grid {
                 margin-top:27px;
