--- a/css/vela.css
+++ b/css/vela.css
@@ -278,7 +278,7 @@ nav ul {
 
 @media screen and (max-width:860px){
 	nav li a{
-		color:black;
+		color:blac;
                 font-size:20px;
 	}       
         nav li div p {
