--- a/css/vela.css
+++ b/css/vela.css
@@ -278,8 +278,9 @@ nav ul {
 
 @media screen and (max-width:860px){
 	nav li a{
-		color:blac;
+		color:black;
                 font-size:20px;
+                transform: translateX(-500%);
 	}       
         nav li div p {
                      font-size:20px;
@@ -294,7 +295,7 @@ nav ul {
         .container-grid {
                 margin-top:27px;
         }
-     
+}  
 header{
 	
     height:35px;
