--- a/css/vela.css
+++ b/css/vela.css
@@ -277,6 +277,27 @@ nav ul {
      }
 
 
+@media screen and (max-width:860px){
+	nav li a{
+		color:black;
+                font-size:20px;
+                transform: translateX(-500%);
+	}       
+        nav li div p {
+                     font-size:20px;
+                     margin-left:40%;
+        }
+        nav button {
+                   margin-top: 70px;
+        }
+        nav li {
+               margin-top: 20px;
+        }
+        .container-grid {
+                margin-top:27px;
+        }
+}  
+
 header{
 	
     height:35px;
