--- a/css/vela.css
+++ b/css/vela.css
@@ -303,6 +303,9 @@ nav ul {
               grid-template-columns: repeat(2, 1fr);
               grid-gap: 10px;
         }
+        body {
+             display:none;
+        }
 }  
 
 header{
