--- a/css/vela.css
+++ b/css/vela.css
@@ -235,7 +235,7 @@ ul li .active{
 		background-color:white;
 		display:flex;
 		flex-direction:column;
-		align-items:center;
+		align-items: flex-start;
 		width:85%;
 		transform: translateX(-400%);
 		
